--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <br><br>
 <div class="row">
   <div class="col-lg-12">
+    <%= render('layouts/errors', :object => @user) %>
+
     <%= render 'user_form' %>
   </div>
 </div>
